<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        tools:context="com.example.firebaseapp.auth.ProfileActivity">

    <!-- USER DATA CONTAINER -->

    <!-- PROGRESS BAR -->
    <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/profile_activity_progress_bar"
            android:layout_width="30dip"
            android:layout_height="30dip"
            android:layout_margin="@dimen/default_large_margin"
            android:visibility="invisible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/profile_header_container"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@color/colorSand"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!-- PROFILE IMAGE -->
    <ImageView
            android:id="@+id/profile_activity_imageview_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toTopOf="@+id/profile_activity_edit_text_username"
            app:layout_constraintLeft_toLeftOf="@+id/profile_header_container"
            app:layout_constraintRight_toRightOf="@+id/profile_header_container"
            app:layout_constraintTop_toTopOf="@+id/profile_header_container"
            app:srcCompat="@drawable/ic_moustache480px" />


    <!-- PROFILE USERNAME -->
    <EditText
            android:id="@+id/profile_activity_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:layout_marginTop="10dp"
            android:text="@string/text_input_username"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toTopOf="@id/profile_activity_text_view_email"
            app:layout_constraintTop_toBottomOf="@+id/profile_activity_imageview_profile"
            tools:layout_editor_absoluteX="10dp" />

    <!-- PROFILE EMAIL CONTAINER -->
    <TextView
            android:id="@+id/profile_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_view_email"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/profile_back_buttons"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_activity_edit_text_username" />

    <!-- PROFILE EMAIL -->
    <TextView
            android:id="@+id/profile_activity_text_view_email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/default_margin"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/profile_label_email"
            app:layout_constraintLeft_toRightOf="@+id/profile_label_email"
            app:layout_constraintRight_toRightOf="parent" />


    <!-- CHECKBOX IS USER MENTOR -->
    <!--
            <CheckBox
                    android:id="@+id/profile_activity_check_box_is_mentor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check_box_is_mentor"/>
    -->


    <!-- BUTTONS CONTAINER -->
    <ImageView
            android:id="@+id/profile_back_buttons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bckgr_profile_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_label_email" />
    <!--button chat-->
    <GridLayout
            android:id="@+id/profile_grid_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="vertical"
            android:rowCount="4"
            app:layout_constraintBottom_toBottomOf="@+id/profile_back_buttons"
            app:layout_constraintLeft_toLeftOf="@+id/profile_back_buttons"
            app:layout_constraintRight_toRightOf="@+id/profile_back_buttons"
            app:layout_constraintTop_toTopOf="@+id/profile_back_buttons">

        <Button
                android:id="@+id/main_activity_button_chat"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/ic_chat"
                android:padding="@dimen/default_margin"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

        <TextView
                android:layout_width="80dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/chat_with_mentor"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size" />

        <!-- BUTTON UPDATE USERNAME -->
        <Button
                android:id="@+id/profile_activity_button_update"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/ic_update"
                android:padding="@dimen/default_margin"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size" />

        <TextView
                android:layout_width="80dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_update_account"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size" />

        <!-- BUTTON SIGN OUT -->
        <Button
                android:id="@+id/profile_activity_button_delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_gravity="left|bottom"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/ic_deconnect"
                android:padding="@dimen/default_margin" />

        <TextView
                android:layout_width="80dp"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/button_sign_out_account"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size" />

        <!-- BUTTON DELETE ACCOUNT -->
        <Button
                android:id="@+id/profile_activity_button_sign_out"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="@dimen/default_margin"
                android:background="@drawable/ic_delete"
                android:padding="@dimen/default_margin" />

        <TextView
                android:layout_width="80dp"
                android:layout_row="3"
                android:text="@string/button_delete_account"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>